--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="footer">
             <h1>Get In Touch</h1>
             <p>Email or call us to set up a consult</p>
-            <p>Email: <b>contact@acmephotos.test</b></p>
-            <p>Phone: <b>(617) 555-5555</b></p>
+            <p>Email: <b>mail@photography.in</b></p>
+            <p>Phone: <b>+91 1234567890</b></p>
         </div>
     </body>
     
