--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Photo-Critic Photography</title>
+        <title>Photography</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="fevicon.PNG">
     </head>
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="introPage">
                 <div class="box1">
-                    <h1>Photo-Critic Photography</h1>
+                    <h1>Photography</h1>
                     <h3>Beautiful Natural Photography</h3>
                     <button class="btn">View Work</button>
                 </div>
